feat(quest): complete compact XML migration