@@ -2,6 +2,8 @@ package com.aionemu.gameserver.questEngine.definition;
 
 import com.aionemu.gameserver.questEngine.model.QuestStatus;
 
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Objects;
 
@@ -9,7 +11,7 @@ import java.util.Objects;
 public record NodeProjection(QuestStatus status, Map<String, Integer> variables) {
 	public NodeProjection {
 		status = Objects.requireNonNull(status, "status");
-		variables = Map.copyOf(Objects.requireNonNull(variables, "variables"));
+		variables = Collections.unmodifiableMap(new LinkedHashMap<>(Objects.requireNonNull(variables, "variables")));
 		if (variables.keySet().stream().anyMatch(name -> name == null || name.isBlank())) {
 			throw new IllegalArgumentException("projection variable names must not be blank");
 		}
